[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Neonpeacasso"
authors = [
  { name="Viacheslav Ivannikov", email="slava.v.ivannikov@gmail.com" },
  { name="Victor Dibia", email="victor.dibia@gmail.com" },
]
description = "UI tool to help you generate art (and experiment) with multimodal (text, image) AI models (stable diffusion)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "transformers",
    "scipy",
    "ftfy",
    "diffusers==0.2.4",
    "torch",
    "pydantic",
    "uvicorn",
    "typer",
    "fastapi",
    "albumentations==0.4.3",
    "gradio>=3.3",
    "opencv-python==4.1.2.30",
    "pudb==2019.2",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.4.2",
    "pytorch-lightning==1.4.2",
    "omegaconf==2.1.1",
    "test-tube>=0.7.5",
    "streamlit>=0.73.1",
    "einops==0.3.0",
    "torch-fidelity==0.3.0",
    "transformers==4.19.2",
    "torchmetrics==0.6.0",
    "kornia==0.6",
    "-e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers",
    "-e git+https://github.com/openai/CLIP.git@main#egg=clip",
    "-e git+https://github.com/neonsecret/stable-diffusion",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "neonpeacasso.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]  
include = ["neonpeacasso*"]
exclude = ["*.tests*"]  
namespaces = false  

[tool.setuptools.package-data]
"peacasso" = ["*.*"]

[project.urls]
"Homepage" = "https://github.com/neonsecret/neonpeacasso"
"Bug Tracker" = "https://github.com/victordibia/peacasso/issues"

[project.scripts]
peacasso = "neonpeacasso.cli:run"