[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Neonpeacasso"
authors = [
  { name="Viacheslav Ivannikov", email="slava.v.ivannikov@gmail.com" },
  { name="Victor Dibia", email="victor.dibia@gmail.com" },
]
description = "UI tool to help you generate art (and experiment) with multimodal (text, image) AI models (stable diffusion)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "transformers",
    "scipy",
    "ftfy",
    "diffusers==0.2.4",
    "torch",
    "pydantic",
    "uvicorn",
    "typer",
    "fastapi",
    "albumentations",
    "opencv-python",
    "pudb",
    "imageio",
    "imageio-ffmpeg",
    "pytorch-lightning",
    "omegaconf",
    "test-tube",
    "streamlit>=0.73.1",
    "einops",
    "torch-fidelity",
    "transformers",
    "torchmetrics",
    "kornia",
    "taming-transformers @ git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers",
    "CLIP @ git+https://github.com/openai/CLIP.git@main#egg=clip",
    "ldm @ git+https://github.com/neonsecret/stable-diffusion",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "neonpeacasso.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]  
include = ["neonpeacasso*"]
exclude = ["*.tests*"]  
namespaces = false  

[tool.setuptools.package-data]
"peacasso" = ["*.*"]

[project.urls]
"Homepage" = "https://github.com/neonsecret/neonpeacasso"
"Bug Tracker" = "https://github.com/victordibia/peacasso/issues"

[project.scripts]
peacasso = "neonpeacasso.cli:run"